alignment fixes

--- a/packages/compass-aggregations/src/components/add-stage/add-stage.less
+++ b/packages/compass-aggregations/src/components/add-stage/add-stage.less
@@ -5,11 +5,11 @@
   display: flex;
   justify-content: center;
   position: relative;
-  margin: 15px 0px 5px 15px;
+  margin: 0px 0px 15px 15px;
   border: 1px solid @gray6;
   border-radius: 4px;
   box-shadow: 1px 1px 1px @gray6;
-  background: rgb(248, 248, 248);
+  background: @pw;
   width: 370px;
 
   button {
