--- a/packages/compass-aggregations/src/components/delete-stage/delete-stage.less
+++ b/packages/compass-aggregations/src/components/delete-stage/delete-stage.less
@@ -7,6 +7,6 @@
 
   button {
     width: 30px;
-    margin-right: 2px;
+    margin-right: 6px;
   }
 }
