--- a/packages/compass-aggregations/src/components/input-builder/input-builder.less
+++ b/packages/compass-aggregations/src/components/input-builder/input-builder.less
@@ -3,5 +3,5 @@
   position: relative;
   margin: 0px 18px 15px 18px;
   padding: 10px 0px 10px 0px;
-  width: 356px;
+  width: 350px;
 }
