--- a/packages/compass-aggregations/src/components/input-collapser/input-collapser.less
+++ b/packages/compass-aggregations/src/components/input-collapser/input-collapser.less
@@ -1,3 +1,7 @@
 .input-collapser {
   position: relative;
+
+  .btn-xs {
+  	max-width: 30px;
+  }
 }
