--- a/packages/compass-aggregations/src/components/input-preview-toolbar/input-preview-toolbar.less
+++ b/packages/compass-aggregations/src/components/input-preview-toolbar/input-preview-toolbar.less
@@ -5,7 +5,7 @@
 
   &-text {
     font-size: 12px;
-    padding-left: 30px;
+    padding-left: 10px;
     color: @gray1;
   }
 }
