--- a/packages/compass-aggregations/src/components/input-refresh/input-refresh.less
+++ b/packages/compass-aggregations/src/components/input-refresh/input-refresh.less
@@ -1,4 +1,4 @@
 .input-refresh {
   flex-grow: 0;
-  padding-right: 18px;
+  padding-right: 22px;
 }
