--- a/packages/compass-aggregations/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
+++ b/packages/compass-aggregations/src/components/pipeline-builder-toolbar/pipeline-builder-toolbar.less
@@ -13,7 +13,7 @@
   :global {
     .dropdown {
       margin-left: 3px;
-      padding-right: 2px;
+      padding-right: 6px;
       height: 22px;
 
       &-toggle {
