--- a/packages/compass-aggregations/src/components/stage-collapser/stage-collapser.less
+++ b/packages/compass-aggregations/src/components/stage-collapser/stage-collapser.less
@@ -1,3 +1,7 @@
 .stage-collapser {
   position: relative;
+
+  .btn-xs {
+  	max-width: 30px;
+  }
 }
