--- a/packages/compass-aggregations/src/components/stage-editor/stage-editor.less
+++ b/packages/compass-aggregations/src/components/stage-editor/stage-editor.less
@@ -8,7 +8,7 @@
   overflow: hidden;
   background: @gray8;
   border-left: 2px solid @gray10;
-  width: 356px;
+  width: 350px;
   &-errormsg {
     flex-shrink: 0;
     position: relative;
