--- a/packages/compass-aggregations/src/components/stage-preview/stage-preview.less
+++ b/packages/compass-aggregations/src/components/stage-preview/stage-preview.less
@@ -7,7 +7,7 @@
   overflow: auto;
 
   &-invalid {
-    padding-left: 20px;
+    padding-left: 15px;
   }
 
   &-documents {
